--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-Kusocisme->
+<!-Kusocismee->
     <head>
         <meta charset="utf-8">
         <title>Murach's Java Servlets and JSP</title>
